Make robolectric run unit tests on Android Studio.